--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
 	"name": "rmcgirr83/editedposts_unread",
 	"type": "phpbb-extension",
 	"description": "Will mark posts as unread if edited",
-	"homepage": "https://github.com/rmcgirr83/phpbb-3.1-ext-editedposts_unread
-",
+	"homepage": "https://github.com/rmcgirr83/phpbb-3.1-ext-editedposts_unread",
 	"version": "1.0.0",
 	"time": "2016-01-10",
 	"keywords": ["phpbb", "extension", "mark edited posts unread"],
