--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "rmcgirr83/editedposts_unread",
+	"name": "rmcgirr83/editedpostsunread",
 	"type": "phpbb-extension",
 	"description": "Will mark posts as unread if edited",
 	"homepage": "https://github.com/rmcgirr83/phpbb-3.1-ext-editedposts_unread",
@@ -23,7 +23,7 @@
 	"extra": {
 		"display-name": "Mark Edited Posts Unread",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0-RC2,<3.2.*"
+			"phpbb/phpbb": ">=3.1.0-RC2,<3.2"
 		}
 	}
 }
