--- a/config/services.yml
+++ b/config/services.yml
@@ -1,6 +1,6 @@
 services:
-    rmcgirr83.editedposts_unread.listener:
-        class: rmcgirr83\editedposts_unread\event\listener
+    rmcgirr83.editedpostsunread.listener:
+        class: rmcgirr83\editedpostsunread\event\listener
         arguments:
             - @dbal.conn		
             - %core.root_path%
