--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,7 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.3",
-		"composer/installers": "~1.0"
-	},
-	"require-dev": {
-		"phpbb/epv": "dev-master"
+		"php": ">=5.3.3"
 	},
 	"extra": {
 		"display-name": "Mark Edited Posts Unread",
