--- a/config/services.yml
+++ b/config/services.yml
@@ -2,8 +2,8 @@ services:
     rmcgirr83.editedpostsunread.listener:
         class: rmcgirr83\editedpostsunread\event\listener
         arguments:
-            - @dbal.conn		
-            - %core.root_path%
-            - %core.php_ext%
+            - '@dbal.conn'		
+            - '%core.root_path%'
+            - '%core.php_ext%'
         tags:
             - { name: event.listener }
