--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
 	"type": "phpbb-extension",
 	"description": "Will mark posts as unread if edited",
 	"homepage": "https://github.com/rmcgirr83/phpbb-3.1-ext-editedposts_unread",
-	"version": "1.0.0",
-	"time": "2016-01-10",
+	"version": "1.0.1",
+	"time": "2017-12-29",
 	"keywords": ["phpbb", "extension", "mark edited posts unread"],
 	"license": "GPL-2.0",
 	"authors": [
@@ -14,12 +14,14 @@
 		}
 	],
 	"require": {
-		"php": ">=5.3.3"
+		"php": ">=5.4",
+		"phpbb/phpbb": ">=3.2.0,<3.3",
+		"composer/installers": "~1.0.0"
 	},
 	"extra": {
 		"display-name": "Mark Edited Posts Unread",
 		"soft-require": {
-			"phpbb/phpbb": ">=3.1.0-RC2,<3.2"
+			"phpbb/phpbb": ">=3.2.0,<3.3"
 		}
 	}
 }
