--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,14 @@ matrix:
       env: DB=mysqli
     - php: 7.1
       env: DB=mysqli
+    - php: nightly
+      env: DB=mysqli
     - php: hhvm
       env: DB=mysqli
   allow_failures:
     - php: 7.0
     - php: 7.1
+    - php: nightly
     - php: hhvm
   fast_finish: true
 
@@ -38,8 +41,8 @@ env:
     - EXTNAME="rmcgirr83/phpbb-3.1-ext-editedposts_unread"  # CHANGE name of the extension HERE
     - SNIFF="1"            # Should we run code sniffer on your code?
     - IMAGE_ICC="0"        # Should we run icc profile sniffer on your images?
-    - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
-    - PHPBB_BRANCH="3.1.x"
+    - EPV="0"              # Should we run EPV (Extension Pre Validator) on your code?
+    - PHPBB_BRANCH="3.2.x"
 
 branches:
   only:
