--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ language: php
 
 matrix:
   include:
+   - php: 5.5
+      env: DB=none;NOTESTS=1 
     - php: 5.4
       env: DB=mysqli
     - php: 5.4
