--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,16 @@
 # Opt into fully virtualized infrastructure
-sudo: false
-dist: precise
+sudo: required
 
 language: php
 
 matrix:
   include:
-   - php: 5.5
-      env: DB=none;NOTESTS=1 
+    - php: 5.3
+      env: DB=none;NOTESTS=1  
+    - php: 5.3.3
+      env: DB=mysqli
+    - php: 5.3
+      env: DB=mysqli # MyISAM
     - php: 5.4
       env: DB=mysqli
     - php: 5.4
@@ -26,16 +29,10 @@ matrix:
       env: DB=mysqli    
     - php: 7.0
       env: DB=mysqli
-    - php: 7.1
-      env: DB=mysqli
-    - php: nightly
-      env: DB=mysqli
     - php: hhvm
       env: DB=mysqli
   allow_failures:
     - php: 7.0
-    - php: 7.1
-    - php: nightly
     - php: hhvm
   fast_finish: true
 
@@ -44,8 +41,8 @@ env:
     - EXTNAME="rmcgirr83/phpbb-3.1-ext-editedposts_unread"  # CHANGE name of the extension HERE
     - SNIFF="1"            # Should we run code sniffer on your code?
     - IMAGE_ICC="0"        # Should we run icc profile sniffer on your images?
-    - EPV="0"              # Should we run EPV (Extension Pre Validator) on your code?
-    - PHPBB_BRANCH="3.2.x"
+    - EPV="1"              # Should we run EPV (Extension Pre Validator) on your code?
+    - PHPBB_BRANCH="3.1.x"
 
 branches:
   only:
